<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayoutID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cancelImageViewCallerID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/ic_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/whiteColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_call"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/whiteColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/permissionCardViewCallerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="@id/guideline1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/permissionTextViewID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/flash_on_call_permission"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dialerLayoutID"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/notificationAccessLayoutID"
                app:layout_constraintTop_toBottomOf="@id/permissionTextViewID">

                <TextView
                    android:id="@+id/cameraTextViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dialerDesTextViewID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:text="@string/flashlight"
                    android:textSize="@dimen/_10ssp"
                    android:singleLine="false"
                    app:layout_constraintEnd_toStartOf="@id/callerCameraSwitchID"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cameraTextViewID" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/callerCameraSwitchID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:track="@drawable/custom_switch_track"
                    android:thumb="@drawable/custom_switch_thumb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/notificationAccessLayoutID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/dialerLayoutID">

                <TextView
                    android:id="@+id/notificationAccessTextViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_phone_state"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/notificationDesDesTextViewID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:text="@string/read_different_states_of_phone"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toStartOf="@id/readPhoneStateSwitchID"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/notificationAccessTextViewID" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/readPhoneStateSwitchID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:track="@drawable/custom_switch_track"
                    android:thumb="@drawable/custom_switch_thumb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>
</androidx.constraintlayout.widget.ConstraintLayout>